<resources>
    <string name="app_name">Lab3</string>
    <string name="perimeter_button_name">Периметр</string>
    <string name="area_button_name">Площа</string>
    <string name="square_button_name">Квадрат</string>
    <string name="triangle_button_name">Трикутник</string>
    <string name="circle_button_name">Коло</string>
    <string name="info_button_name">Відкрити сховище</string>
    <string name="erase_button_name">Очистити сховище</string>

</resources>